# server-client-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS.md  Gemfile  MANIFEST.in  README.md  _config.yml  contributing.md  getcontributors.py  index.md  issue_checking.py  publish.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  smoke.py  somme.py  versioneer.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-coverage.yml  meta-checks.yml  publish-pypi.yml  pypi-smoke-tests.yml  run-tests.yml  slack.yml
_includes/: docs_menu.html  footer.html  head.html  header.html
_layouts/: docs.html
css/: extra.css  main.css
docs/: accelerate_workbook_doc.md  api-ref-x.md  api-ref.md  api-ref.md.orig  api-ref.md.rej  dev-guide.md  environment-variables.md  filter-sort.md  getting-help.md  index.md  page-through-results.md  patch  populate-connections-views.md  samples.md  sign-in-out.md  troubleshooting.md  versions.md
docs/_includes/: docs_menu.html  head.html  header.html
docs/_layouts/: docs.html  search.html
docs/docs/: api-ref.md  dev-guide.md  filter-sort.md  index.md  page-through-results.md  populate-connections-views.md  readme.md  samples.md  sign-in-out.md  versions.md
samples/: accelerate_workbooks.py  add_default_permission.py  create_extract_task.py  create_flow.py  create_group.py  create_group_using_jwt.py  create_project.py  create_schedules.py  create_user.py  data.json  download_view_image.py  explore_datasource.py  explore_favorites.py  explore_site.py  explore_webhooks.py  explore_workbook.py  export.py  export_wb.py  extracts.py  filter_sort_groups.py  filter_sort_projects.py  get_view_image.py  group_filtering.py  initialize_server.py  json_worker.py  kill_all_jobs.py  list.py  login.py  materialize_workbooks.py  materialized_views_status.py  metadata_paginated_query.py  metadata_query.py  migrate_with_datasources.py  move_workbook_projects.py  move_workbook_sites.py  name.txt  online_users.csv  options_builder.py  pagination_sample.py  publish_datasource.py  (+22 more)
samples/getting_started/: 1_hello_server.py  1_hello_world.py  2_hello_site.py  3_hello_content.py  3_hello_universe.py  4_proxy_connections.py
smoke/: __init__.py  smoke.py
tableauserverapi/models/: __init__.py  connection_item.py  datasource_item.py  exceptions.py  fileupload_item.py  group_item.py  pagination_item.py  project_item.py  site_item.py  tableau_auth.py  tag_item.py  user_item.py  view_item.py  workbook_item.py
tableauserverapi/server/: exceptions.py  filter.py  request_factory.py  request_options.py  server.py
tableauserverclient/: __init__.py  _version.py  config.py  datetime_helpers.py  exponential_backoff.py  filesys_helpers.py  namespace.py  type_helpers.py
tableauserverclient/helpers/: __init__.py  exceptions.py  headers.py  importer.py  logging.py  property_decorators.py  readme.md  strings.py
tableauserverclient/models/: __init__.py  access_permissions.py  collection_item.py  column_item.py  connection_credentials.py  connection_item.py  custom_view_item.py  data_acceleration_report_item.py  data_alert_item.py  data_freshness_policy_item.py  database_item.py  datasource_item.py  dqw_item.py  exceptions.py  extensions_item.py  extract_item.py  favorite_item.py  favorites_item.py  fileupload_item.py  flow_item.py  flow_run_item.py  flowrun_item.py  group_item.py  groupset_item.py  interval_item.py  job_item.py  json_web_token_auth.py  linked_tasks_item.py  location_item.py  metric_item.py  oidc_item.py  pagination_item.py  permission_item.py  permissions_item.py  personal_access_token_auth.py  project_item.py  property_decorators.py  property_not_nullable_decorator.py  property_type_decorator.py  reference_item.py  (+17 more)
tableauserverclient/requests/: readme.md
tableauserverclient/server/: __init__.py  exceptions.py  filter.py  image_request_options.py  pager.py  query.py  request_factory.py  request_options.py  request_options_base.py  server.py  sort.py
test/: _utils.py  online_tests.py  test_auth.py  test_connection_.py  test_custom_view.py  test_data_acceleration_report.py  test_data_freshness_policy.py  test_dataalert.py  test_database.py  test_datasource.py  test_datasource_model.py  test_dqw.py  test_endpoint.py  test_exponential_backoff.py  test_extensions.py  test_favorites.py  test_filesys_helpers.py  test_fileuploads.py  test_filter.py  test_flow.py  test_flowruns.py  test_flowtask.py  test_group.py  test_group_model.py  test_groupsets.py  test_job.py  test_linked_tasks.py  test_metadata.py  test_metrics.py  test_oidc.py  test_pager.py  test_permissionsrule.py  test_project.py  test_project_model.py  test_regression_tests.py  test_request_option.py  test_requests.py  test_schedule.py  test_server_info.py  test_site.py  (+18 more)
test/assets/: RESTAPISample.twb  SampleDS.tds  SampleFlow.tfl  World Indicators.tds  World Indicators.tdsx  (+223 more)
versioneer/: versioneer.py
(+72 files in other folders)
